--- a/app/res/values/style.xml
+++ b/app/res/values/style.xml
@@ -24,5 +24,14 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
+    
+    <style name="MyDialog" parent="@android:Theme.Dialog">
+    	<item name="android:windowFrame">@null</item>
+	    <item name="android:windowNoTitle">true</item>
+     	<item name="android:windowIsFloating">true</item>
+     	<item name="android:windowContentOverlay">@null</item>
+     	<item name ="android:windowBackground">@color/dialogbg</item>
+ </style>
+    
 
 </resources>
