--- a/app/res/layout-normal/personal_data.xml
+++ b/app/res/layout-normal/personal_data.xml
@@ -44,6 +44,7 @@
         android:background="@drawable/title" >
 
         <TextView
+            android:id="@+id/textView1"
             style="@style/text_white_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -59,6 +60,17 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="28.42dp" />
+
+        <ToggleButton
+            android:id="@+id/toggleButton1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/textView1"
+            android:layout_alignBottom="@+id/textView1"
+            android:layout_alignLeft="@+id/textView1"
+            android:layout_marginLeft="100dp" 
+            android:onClick="onToggleClicked"/>
+
     </RelativeLayout>
 
     <LinearLayout
@@ -113,11 +125,14 @@
                 style="@style/text_white_content"
                 android:layout_width="84dp"
                 android:layout_height="32dp"
-                android:layout_centerInParent="true"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
                 android:background="@drawable/button_blue"
-                android:gravity="center"
+                android:gravity="center|center_vertical|center_horizontal"
                 android:text="儲存" />
+
         </RelativeLayout>
+
     </LinearLayout>
 
 </LinearLayout>
