--- a/app/res/layout-normal/personal_data.xml
+++ b/app/res/layout-normal/personal_data.xml
@@ -44,7 +44,6 @@
         android:background="@drawable/title" >
 
         <TextView
-            android:id="@+id/textView1"
             style="@style/text_white_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -60,17 +59,6 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="28.42dp" />
-
-        <ToggleButton
-            android:id="@+id/toggleButton1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/textView1"
-            android:layout_alignBottom="@+id/textView1"
-            android:layout_alignLeft="@+id/textView1"
-            android:layout_marginLeft="100dp" 
-            android:onClick="onToggleClicked"/>
-
     </RelativeLayout>
 
     <LinearLayout
@@ -125,14 +113,11 @@
                 style="@style/text_white_content"
                 android:layout_width="84dp"
                 android:layout_height="32dp"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
+                android:layout_centerInParent="true"
                 android:background="@drawable/button_blue"
-                android:gravity="center|center_vertical|center_horizontal"
+                android:gravity="center"
                 android:text="儲存" />
-
         </RelativeLayout>
-
     </LinearLayout>
 
 </LinearLayout>
