--- a/app/res/layout/general.xml
+++ b/app/res/layout/general.xml
@@ -11,7 +11,8 @@
         style="@style/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="一般報案" />
+        android:textSize="20sp"
+        android:text="iHelp" />
 
     <TextView
         style="@style/text_black_content"
@@ -20,7 +21,7 @@
         android:paddingBottom="10dp"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
-        android:text="請選擇災情：" />
+        android:text="" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -56,7 +57,7 @@
         android:gravity="bottom"
         android:paddingBottom="10dp"
         android:paddingLeft="20dp"
-        android:text="您即將傳送的報案內容如下：" />
+        android:text="SMS Message" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -97,7 +98,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/button_blue"
                 android:onClick="submit"
-                android:text="立即報案" />
+                android:text="Send" />
 
             <Button
                 style="@style/text_white_content"
@@ -109,7 +110,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/button_blue"
                 android:onClick="clock"
-                android:text="取消報案" />
+                android:text="Close" />
         </LinearLayout>
 
         <TextView
@@ -119,7 +120,7 @@
             android:layout_weight="0.5"
             android:background="@color/attach_color"
             android:gravity="center"
-            android:text="本系統以簡訊方式，通知警方及緊急聯絡人" />
+            android:text="" />
     </LinearLayout>
 
 </LinearLayout>
